# auto-register

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README_en.md  README_vi.md  REASONIX.md  main.py  pyproject.toml  start.bat  start.sh
.reasonix/truncated-results/: 1781500983837-d27da0b5-run_command.txt  1781500983986-bfe7823b-run_command.txt
api/: accounts.py  chat2api_proxy.py  clash.py  stats.py
application/: account_exports.py  tasks.py
core/: account_graph.py  any2api_sync.py  base_captcha.py  clash_proxy.py  lifecycle.py  platform_accounts.py  scheduler.py
core/registration/: flows.py
customer_portal_api/: README.md
customer_portal_api/app/: catalog.py
customer_portal_api/app/routers/: admin.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/settings/: ClashProxySettings.tsx
frontend/src/lib/: config-options.ts
frontend/src/pages/: Accounts.tsx  Chat2API.tsx  CodexConvert.tsx  Dashboard.tsx  Register.tsx  Settings.tsx  SettingsPage.tsx
infrastructure/: config_repository.py  platform_runtime.py  provider_definitions_repository.py
providers/: registry.py
providers/captcha/: local_solver.py
resources/: provider_driver_templates.json
services/: chat2api_proxy.py  task_runtime.py
tests/: test_any2api_sync.py  test_api_accounts.py  test_api_lifecycle.py  test_api_platforms.py  test_api_stats.py
