[project]
name = "gpt-auto-register"
version = "0.1.0"
description = "ChatGPT 账号自动注册与管理"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.16",
    "curl_cffi>=0.6.0",
    "requests>=2.31.0",
    "playwright>=1.43.0",
    "pydantic>=2.0.0",
    "jwcrypto>=1.5.0",
    "cbor2>=5.4.0",
    "camoufox>=0.4.0",
    "aiofiles>=23.0.0",
    "patchright>=1.0.0",
    "quart>=0.19.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
